# crustyhelpdesk

./: .env.example  .gitignore  README.md  SETUP.md  install.php  package-lock.json  package.json
.claude/: settings.local.json
agent/: Cargo.toml  config.example.toml
agent/src/: api_client.rs  config.rs  event_log.rs  main.rs  models.rs  poller.rs  service.rs
prisma/: schema.prisma  seed.ts
prisma/migrations/0001_init/: migration.sql
prisma/migrations/20260308235843_init/: migration.sql
prisma/migrations/20260310223514_init/: migration.sql
prisma/migrations/20260310224734_add_comments/: migration.sql
prisma/migrations/20260310225819_comment_system_update/: migration.sql
prisma/migrations/20260311212915_add_category_priority/: migration.sql
prisma/migrations/20260311214322_add_job_role/: migration.sql
prisma/migrations/20260312214753_add_agent_tokens_and_log_machine/: migration.sql
prisma/migrations/20260312220123_add_site_settings/: migration.sql
src/: middleware.ts
src/app/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/profile/: page.tsx
src/app/(dashboard)/settings/: page.tsx
src/app/(dashboard)/tickets/: page.tsx
src/app/api/categories/: route.ts
src/app/api/profile/: route.ts
src/app/api/settings/: route.ts
src/app/api/tickets/: route.ts
src/components/: providers.tsx  site-settings-context.tsx
src/components/layout/: sidebar.tsx
src/lib/: agent-auth.ts  auth.config.ts  auth.ts  db.ts  roles.ts  validators.ts
src/lib/auth-providers/: local.ts
(+17 files in other folders)
